# uds-daemon-example

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  Readme.md  cmake-format.json  makefile  podman-compose.yml
.devcontainer/: Containerfile  devcontainer.json
.github/actions/build-deb/: action.yml
.github/actions/get-deb-version/: action.yml
.github/actions/trigger-and-wait-build/: action.yml
.github/workflows/: ci-build.yml  release.yml
container/: Containerfile  podman-compose.yml
scripts/: build  build-install-run  composectl  debug  install  sockact-ctl  systemd_debug
sockact/: CMakeLists.txt  CMakePresets.json
sockact-example/: CMakeLists.txt  CMakePresets.json
sockact-example/cli/: CMakeLists.txt  sockact-cli.cpp
sockact-example/cmake/: EnableStrictWarnings.cmake  FindLibSystemd.cmake  aarch64-linux-gnu-gcc.cmake
sockact-example/debian/: changelog  control  copyright  files  rules  sockact-example.install
sockact-example/lib/net/: CMakeLists.txt
sockact-example/lib/net/include/: socket.h  uds_server.h
sockact-example/lib/net/src/: socket_session.cpp  uds_server.cpp
sockact-example/lib/utils/: CMakeLists.txt
sockact-example/lib/utils/include/: fdset.h  fs_utils.h  queue.h  sd_notify.h  sd_socket.h  signalhandler.h
sockact-example/lib/utils/src/: pipe.cpp  sd_notify.cpp  sd_socket.cpp  signalhandler.cpp
sockact-example/sockact-a/: CMakeLists.txt  server_worker.h  sockact-a.cpp
sockact-example/systemd/: sockact-a.service  sockact-a.socket
sockact-example/test/: CMakeLists.txt
sockact-example/test/net/: test_socket.cpp  test_uds_client.cpp  test_uds_server.cpp
sockact-example/test/utils/: test_fdset.cpp
sockact/sockact-a/: CMakeLists.txt  sockact-a.cpp
sockact/utils/: CMakeLists.txt
sockact/utils/include/: errormsg.h  signalhandler.h
sockact/utils/src/: signalhandler.cpp
uds-daemon-example/: CMakeLists.txt  CMakePresets.json
uds-daemon-example/cmake/: DebianChangelog.cmake  aarch64-linux-gnu-gcc.cmake
uds-daemon-example/debian/: changelog  control  copyright  rules  uds-daemon-example.install
uds-daemon-example/lib/: CMakeLists.txt
uds-daemon-example/lib/net/include/: endian_convert.h  socket_session.h  uds_client.h
uds-daemon-example/lib/net/src/: uds_client.cpp
uds-daemon-example/lib/utils/include/: byte_util.h  errormsg.h  final_action.h  list.h  pipe.h  sd_socket.h  string_utils.h
uds-daemon-example/lib/utils/src/: fdset.cpp
uds-daemon-example/systemd/: uds-daemon.service  uds-daemon.socket
uds-daemon-example/test/: CMakeLists.txt  test_main.cpp
uds-daemon-example/test/net/: test_uds_server.h
uds-daemon-example/test/utils/: test_byte_util.cpp
uds-daemon-example/uds-daemon/: CMakeLists.txt  server_worker.cpp  socket_session_worker.cpp  socket_session_worker.h  uds-daemon.cpp
uds-daemon-example/udsctl/: CMakeLists.txt  udsctl.cpp
